# openHiTLS

./: .gitignore  CMakeLists.txt  README-zh.md  README.md
apps/: CMakeLists.txt
apps/src/: app_client.c  app_crl.c
auth/: CMakeLists.txt
auth/otp/: CMakeLists.txt
auth/pake/: CMakeLists.txt
auth/privpass_token/: CMakeLists.txt
bsl/: CMakeLists.txt
bsl/asn1/: CMakeLists.txt
bsl/base64/: CMakeLists.txt
bsl/buffer/: CMakeLists.txt
bsl/conf/: CMakeLists.txt
bsl/conf/src/: bsl_conf_def.c
bsl/err/: CMakeLists.txt
bsl/hash/: CMakeLists.txt
bsl/include/: bsl_util_internal.h
bsl/init/: CMakeLists.txt
bsl/list/: CMakeLists.txt
bsl/log/: CMakeLists.txt
bsl/params/: CMakeLists.txt
bsl/pem/: CMakeLists.txt
bsl/print/: CMakeLists.txt
bsl/sal/: CMakeLists.txt
bsl/sal/include/: sal_ip_util.h
bsl/sal/src/: sal_ip_util.c
bsl/tlv/: CMakeLists.txt
bsl/ui/: CMakeLists.txt
bsl/uio/: CMakeLists.txt
bug_reports/: 2026-04-27-openHiTLS-siphash-bug-analysis.md
cmake/: config.h.in  hitls_build_targets.cmake  hitls_collect_feature_macros.cmake  hitls_compile_options.cmake  hitls_config_check.cmake  hitls_define_dependencies.cmake  hitls_gen_info.cmake  hitls_generate_config_h_file.cmake  hitls_load_preset.cmake  hitls_options.cmake  hitls_platform.cmake
cmake/helpers/: hitls_depends_helpers.cmake  hitls_lib_helpers.cmake  hitls_target_helpers.cmake
cmake/presets/: full.cmake  iso19790.cmake
cmake/toolchain/: aarch64-darwin-gcc-15.cmake  aarch64-linux-gnu-gcc.cmake  arm-linux-gnueabihf-gcc.cmake  arm-none-eabi-gcc.cmake  arm64-darwin-apple-clang.cmake  x86_64-linux-clang.cmake  x86_64-linux-gnu-gcc.cmake
codecs/: CMakeLists.txt
config/macro_config/: hitls_build.h
crypto/: CMakeLists.txt
crypto/aes/: CMakeLists.txt
crypto/bn/: CMakeLists.txt
crypto/bn/src/: bn_const.c
crypto/chacha20/: CMakeLists.txt
crypto/cmac/: CMakeLists.txt
crypto/codecsdata/: CMakeLists.txt
crypto/codecsdata/include/: crypt_encode.h
crypto/codecsdata/src/: crypt_encode.c
crypto/codecskey/: CMakeLists.txt
crypto/codecskey/src/: crypt_codecskey_local.c  crypt_decoder_ecc.c
crypto/curve25519/: CMakeLists.txt
crypto/curve25519/src/: noasm_curve25519_fp51_ops.c
crypto/dh/: CMakeLists.txt
crypto/drbg/: CMakeLists.txt
crypto/dsa/: CMakeLists.txt
crypto/eal/: CMakeLists.txt
crypto/eal/src/: eal_md.c  eal_pkey_sign.c
crypto/ealinit/: CMakeLists.txt
crypto/ealinit/src/: cpucap.c
crypto/ecc/: CMakeLists.txt
crypto/ecc/src/: ecp_nistp224.c  ecp_nistp521.c  noasm_ecp_nistp256.c
crypto/ecdh/: CMakeLists.txt
crypto/ecdsa/: CMakeLists.txt
crypto/elgamal/: CMakeLists.txt
crypto/entropy/: CMakeLists.txt
crypto/frodokem/: CMakeLists.txt
crypto/gmac/: CMakeLists.txt
crypto/hkdf/: CMakeLists.txt
crypto/hmac/: CMakeLists.txt
crypto/hpke/: CMakeLists.txt
crypto/hybridkem/: CMakeLists.txt
crypto/kdf/: CMakeLists.txt
crypto/mceliece/: CMakeLists.txt
crypto/md5/: CMakeLists.txt
crypto/mldsa/: CMakeLists.txt
crypto/mlkem/: CMakeLists.txt
crypto/mlkem/src/: asm_ml_kem_ntt.c  asm_ml_kem_poly.c  ml_kem_local.h  ml_kem_pke.c  ml_kem_poly.c
crypto/mlkem/src/asm/: ml_kem_basemul_armv8.S  ml_kem_ntt_armv8.S  ml_kem_poly_armv8.S
crypto/modes/: CMakeLists.txt
crypto/paillier/: CMakeLists.txt
crypto/pbkdf2/: CMakeLists.txt
crypto/provider/: CMakeLists.txt
crypto/provider/src/mgr/: crypt_provider_common.c
crypto/rsa/: CMakeLists.txt
crypto/scrypt/: CMakeLists.txt
crypto/sha1/: CMakeLists.txt
crypto/sha2/: CMakeLists.txt
crypto/sha3/: CMakeLists.txt
crypto/sha3/include/: crypt_sha3.h
crypto/sha3/src/: asm_sha3.c  asm_sha3.h  noasm_sha3.c  sha3.c
crypto/sha3/src/asm/: sha3_armv8.S
crypto/siphash/: CMakeLists.txt
crypto/slh_dsa/: CMakeLists.txt
crypto/sm2/: CMakeLists.txt
crypto/sm3/: CMakeLists.txt
crypto/sm4/: CMakeLists.txt
crypto/sm9/: CMakeLists.txt
crypto/util/: CMakeLists.txt
crypto/xmss/: CMakeLists.txt
docs/bug-reports/: 2026-04-22-hmac-state-management-bugs.md  2026-04-24-property-based-testing-findings.md
docs/index/: index.md
include/crypto/: crypt_eal_cipher.h  crypt_eal_md.h  crypt_eal_pkey.h
include/pki/: hitls_pki_errno.h  hitls_pki_types.h  hitls_pki_x509.h
include/tls/: hitls_cert.h  hitls_cert_type.h  hitls_error.h
pki/: CMakeLists.txt
pki/cms/: CMakeLists.txt
pki/cms/include/: hitls_cms_local.h
pki/cms/src/: hitls_cms_common.c
pki/pkcs12/: CMakeLists.txt
pki/pkcs12/include/: hitls_pkcs12_local.h
pki/print/: CMakeLists.txt
pki/print/src/: hitls_pki_print.c
pki/x509_cert/: CMakeLists.txt
pki/x509_cert/include/: hitls_cert_local.h
pki/x509_common/: CMakeLists.txt
pki/x509_common/include/: hitls_x509_local.h
pki/x509_common/src/: hitls_x509_common.c  hitls_x509_util.c
pki/x509_crl/: CMakeLists.txt
pki/x509_crl/include/: hitls_crl_local.h
pki/x509_csr/: CMakeLists.txt
pki/x509_csr/include/: hitls_csr_local.h
pki/x509_verify/: CMakeLists.txt
pki/x509_verify/include/: hitls_x509_verify.h
pki/x509_verify/src/: hitls_x509_verify.c
platform/: SecureC.cmake
testcode/benchmark/: README.md
testcode/pbt/: CMakeLists.txt  README.md
testcode/rapidcheck/: CMakeLists.txt  HKDF_SALT_TRAILING_ZERO_REPORT.md  HOW_TO_RUN_PBT_TC002.md  README.md  XTS_BLOCK_ALIGNMENT_ANALYSIS.md  XTS_BUG_ANALYSIS.md  XTS_FIX_PROPOSAL.md  rapidcheck_aes_openssl_ref_test.cpp  rapidcheck_aes_test.cpp  rapidcheck_base64_test.cpp  rapidcheck_bn_test.cpp  rapidcheck_buffer_test.cpp  rapidcheck_chacha20_test.cpp  rapidcheck_drbg_test.cpp  (+17 more)
tls/: CMakeLists.txt
tls/alert/: CMakeLists.txt
tls/app/: CMakeLists.txt
tls/ccs/: CMakeLists.txt
tls/cert/: CMakeLists.txt
tls/cert/hitls_x509_adapt/: hitls_x509_cert_chain.c  hitls_x509_cert_store.c
tls/cm/: CMakeLists.txt
tls/cm/src/: conn_establish.c
tls/config/: CMakeLists.txt
tls/config/src/: config.c  config_cert.c
tls/crypt/: CMakeLists.txt
tls/feature/: CMakeLists.txt
tls/handshake/: CMakeLists.txt
tls/handshake/send/src/: send_client_hello.c
tls/include/: tls_config.h
tls/record/: CMakeLists.txt
(+95 files in other folders)
